package business;

import business.models.Experiment;

import java.util.List;

public class ExperimentMaker {
//deprecated
    public static Experiment makeExperiment(List<String> params, String type){
//        business.models.Experiment output = null;
//        if(type.equals("sample")){
//            output = new business.models.SampleExperiment(params.get(0), params.get(1),params.get(2), params.get(3));
//        }else if(type.equals("reagent")){
//            System.out.println("not yet supported");
//        } else return null;
//        return output;
        return null;
    }
}
