package business;

public class ExperimentProcessor {

    public static String processExperiment(String toProcess, String type){
        //this should do the writing to JSON.  Maybe we pass in an experiment object instead of a string (would be experiment ID)
        return null;
    }
}
