@startuml

title __BUSINESS's Class Diagram__\n

  namespace business {
    class business.BusinessProcessContainer {
        - params : List<String>
        - type : String
        + BusinessProcessContainer()
        + getParams()
        + getType()
    }
  }
  

  namespace business {
    class business.CommunicationObserver {
        - files : Stack<JSONObject>
        + CommunicationObserver()
        + hasNext()
        + next()
        + update()
    }
  }
  

  namespace business {
    class business.ExperimentChecker {
        - capabilityMap : Map<String, Capability>
        - supplyMap : Map<String, Supply>
        + ExperimentChecker()
        + checkComplexExperiment()
        + checkExperiment()
        + checkReagentExperiment()
        + checkSampleExperiment()
        + updateCheckState()
    }
  }
  

  namespace business {
    class business.ExperimentCreator {
        + ExperimentCreator()
        + makeComplexExperiment()
        + makeNewExperiment()
        + makeReagentExperiment()
        + makeSampleExperiment()
    }
  }
  

  namespace business {
    class business.ExperimentMaker {
        {static} + makeExperiment()
    }
  }
  

  namespace business {
    class business.ExperimentProcessor {
        {static} + processExperiment()
    }
  }
  

  namespace business {
    class presentation.JUMPSystem {
        {static} + main()
    }
  }
  

  namespace business {
    abstract class business.Observer {
        {abstract} + update()
    }
  }
  

  namespace business {
    class business.ReportParser {
        {static} + parseReport()
        {static} - decideExperiment()
        {static} - updateCapabilities()
        {static} - updateExperimentStatus()
        {static} - updateInventory()
    }
  }
  

  business.CommunicationObserver -up-|> business.Observer
  business.Observer o-- data.CommunicationSubsystem : CS


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
